--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const { title } = Astro.props;
 	</head>
 	<body class="bg-gray-900 min-h-screen pb-32">
 		<Header />
-		<main class="mx-w-5xl px-4 m-auto">
+		<main class="max-w-5xl px-4 m-auto">
 			<slot />
 		</main>
 	</body>
